--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 body{
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
     position: relative;
     background-color: rgb(201, 201, 201);
@@ -74,3 +76,6 @@ body{
 .btn{
     align-self:self-end;
 }
+
+
+
