--- a/signup.css
+++ b/signup.css
@@ -9,7 +9,7 @@ body {
 }
 
 .modal-content {
-    border-radius: 20px;
+    border-radius: 20px !important;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     padding: 20px;
@@ -39,7 +39,7 @@ input[type="email"],
 input[type="password"],
 input[type="file"] {
     border-radius: 5px;
-    /* padding: 10px 15px; */
+    padding: 10px 15px;
     border: 1px solid #ddd;
     transition: 0.3s ease;
 }
@@ -97,4 +97,23 @@ span#loginLink:hover {
     width: 27px;
     margin-inline: 10px;
     border-width: 4px;
+}
+
+
+.fs-6 {
+    font-size: 12px !important;
+}
+
+
+.emailInp {
+    width: 374px;
+}
+
+
+@media screen and (max-width : 470px) {
+    
+
+    .emailInp {
+    width: 100%;
+}
 }
