--- a/product.css
+++ b/product.css
@@ -32,7 +32,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
 }
 
 
@@ -43,10 +42,10 @@
 }
 .product-img img {
   width: 100%;
-  max-width: 400px;
-  height: auto;
-  border-radius: 10px;
-  object-fit: cover;
+  /* max-width: 400px; */
+  height: 100%;
+  /* border-radius: 10px; */
+  object-fit: contain;
 }
 
 .product-info {
